grammar/smilescript.gram
program         : declaration* EOF ;
declaration     : varDecl
                | funDecl
                | classDecl
                | statment ;
varDecl         : "var" IDENTIFIRE ("=" expression)? ";" ;
funDecl         : "fun" function ;
classDecl       : "class" IDENTIFIER "{" function* "}" ;
statement       : exprStmt 
                | ifStmt
                | printStmt
                | whileStmt
                | forStmt
                | breakStmt 
                | continueStmt
                | returnStmt
                | block ;
whileStmt       : "while" "(" expression ")" statement ;
forStmt         : "for" "(" (varDecl | exprStmt | ";" )
                  expression? ";"
                  expression? ")" statement ;
breakStmt       : "break" ";" ;
continueStmt    : "continue" ";" ;
returnStmt      : "return" expression? ";" ;
ifStmt          : "if" "(" expression ")" statement ( "else" statement)? ;
block           : "(" declaration* ")" ;
exprStmt        : expression ";" ;
printStmt       : "print" expression ";" ;
expression      : assignment ;
function        : IDENTIFIER "(" parameters? ")" block ;
parameters      : IDENTIFIER ( "," IDENTIFIER )* ;
assignment      : ( call "." )? IDENTIFIER "=" assignment 
                | logic_or ;
logic_or        : logic_and ("or" logic_and)* ;
logic_and       : equality ("and" equality)* ;
equality        : comparison ( ( "!=" | "==" ) comparsion )* ;  
comparison      : term ( ( ">" | ">=" | "<" | "<=" ) term )* ;
term            : factor ( ( "-" | "+" ) factor )* ;
factor          : unary ( ( "/" | "*" ) unary )* ;
unary           : ("!" | "-") unary | call ;
call            : primary ( "(" arguments? ")" | "." IDENTIFIER )* ;
arguments       : expression ("," expression )* ;
primary         : NUMBER | STRING | "true" | "false" | "nil" 
                | "(" expression ")" | IDENTIFIER ;
